--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+
+    //Libs versions
+    ext {
+        kotlin_version = '1.3.61'
+
+        okhttp_version = "3.11.0"
+
+        room_version = "2.2.3"
+
+        androidx_version = "1.1.0"
+
+        androidx_version_core = "1.2.0"
+
+        life_data = "2.2.0"
+
+        nav_version = "2.2.1"
+
+        google_services = "4.3.3"
+    }
+
     repositories {
         google()
         jcenter()
